# qacdp

./: CMakeLists.txt  Makefile  README.md  acdp.cpp  acdp.h  calendarthread.cpp  calendarthread.h  getcalendartips.cpp  getcalendartips.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_acdp.cpp  moc_login.cpp  moc_mainwindow.cpp  overtimedialog.cpp  overtimedialog.h  overtimedialog.ui  qacdp  qacdp.pro  ui_login.h  ui_mainwindow.h
